Improved fotter, fixed tables on mobile

--- a/docs/index.css
+++ b/docs/index.css
@@ -200,19 +200,13 @@ footer {
   padding: var(--space-l);
   margin-top: var(--space-xl);
   background: var(--color-bg-lc);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 
 footer .made-by {
-  text-align: right;
-  padding-right: var(--space-m);
-  border-right: solid 1px var(--color-border);
 }
 
 footer .source {
-  text-align: left;
-  padding-left: var(--space-m);
+  margin-top: var(--space-s);
 }
 
 footer .last-update {
@@ -254,6 +248,10 @@ footer .last-update {
 .user-summary {
   font-size: var(--font-m);
   margin-bottom: var(--space-l);
+}
+
+.table-box {
+  overflow-x: auto;
 }
 
 table {
@@ -307,30 +305,5 @@ tbody > tr:nth-child(odd) {
 @media screen and (max-width: 31.99rem) {
   body {
     font-size: var(--font-xs);
-  }
-}
-
-@media screen and (max-width: 39.99rem) {
-  footer {
-    grid-template-columns: 1fr;
-  }
-
-  footer .made-by {
-    text-align: center;
-    padding-right: 0;
-    border-right: none;
-  }
-
-  footer .source {
-    text-align: center;
-    padding-left: 0;
-    margin-top: var(--space-s);
-  }
-
-  footer .last-update {
-    color: var(--color-fg-lc);
-    font-size: var(--font-xs);
-    grid-column-end: span 1;
-    margin-top: var(--space-m);
   }
 }
